# Metronomicon

./: .env.template  .gitignore  GARAGE.md  README.md  compose.yaml  garage.toml  package-lock.json  testing.conf
backend/: .env.template  Cargo.toml  Dockerfile  flake.nix  test.md
backend/.sqlx/: query-0c02f33fbdc860167869eb288c95434f1c40e837318df8c685729d6790ad2cc4.json  query-113c53da2a3e9b99bce7da7d8018d2267a7db5aaca6746c9c76a48ca6233ac46.json  query-19e6bddfbc1ea26ff713e35d7fec7ef4e1ef952c66ec53ca5c79586b06c4ffc5.json  query-217793946387c9cd64c277ea4bdf587c878f75bf5b9ae915776f4cff69b847af.json  query-5bb75e131690e61b1f4d721664b1a0d9f199858c3efd5e6dfdaf7688e6b70473.json  query-621e4300cc04c456bd69409ed80ad8cf7dd34b8d40cfec9ab9fcd859b0b35905.json  query-6a11a31d3073d035a7099101700ed633b4c217ab9016da1744dbd591c3c642a4.json  query-74a45dcb75d0256fb69122a8700b3902ad894f7abdd3618b7700e1da148f0bf5.json  query-91e5ee34cbd6767e7102cc7565ea594930bfce8d0c27fad4df8d4e996e8d8339.json  query-a8130c2d774e1dd2f8789f5532f2d1ceca14af59acf3d785929d10283aa17e88.json  query-aeb78a055e45352c60591a771bc306fcecda49234abf369e744089cac9974156.json  query-c008c7985d8aacdbcaa10e810d8c2d0eb8960cbe00cdc1945a5b0b1b2140b561.json  query-e0fe7ec9e32b8ace5ada741db2d48819a14790ad8dae9d12ba76023089e748b4.json  query-eaf3682a233ab0b268ff8aef52fcdc10b3c10efac5d5ee63296d807450e74420.json  query-f3f3d05199e144b165fa6c14aa37d54cfcf650f082cb1d2075c889e5cbefe1b6.json
backend/examples/: garage_smoke.rs
backend/migrations/: 0001_create_test.sql  0002_create_tables.sql  0003_add_role.sql  0005_create_events.sql  0006_create_course_list.sql  0006_permissions.sql
backend/modules/: shell.nix
backend/src/: config.rs  error.rs  main.rs  state.rs  storage.rs
backend/src/admin/: dto.rs  handlers.rs  mod.rs  routes.rs
backend/src/aggregates/: mod.rs  shared.rs
backend/test-http/: Add tag to course.yml  Create course.yml  Create link.yml  Delete course.yml  DeleteLink.yml  Fetch course list.yml  Fetch course.yml  Remove tag from course.yml  SetLinkOfficialStatus.yml  Update course metadata.yml  Update link.yml  opencollection.yml
frontend/: test.md  (+5 more)
(+95 files in other folders)
