[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
serde = "1.0.228"
sqlx = { version = "0.9.0", features = ["uuid", "postgres", "macros", "migrate", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["full"] }
base64 = "0.22.1"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.10.1"
tower-http = { version = "0.7.0", features = ["cors"] }
uuid = { version = "1.23.3", features = ["serde"] }
thiserror = "2.0.18"

[dev-dependencies]
uuid = { version = "1.23.3", features = ["serde", "v4"] }
